# saypal.ai

./: .gitignore  pyproject.toml
app/: init_db.py  main.py  test.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_base.py  crud_conversation.py  crud_memory.py  crud_pal.py  crud_token.py  crud_user.py
app/crud/functions/: func_conversation.py  func_memory.py  func_pal.py  func_user.py
app/db/: base.py  base_class.py  operations.py  session.py
app/models/: __init__.py  conversation.py  media.py  memory.py  pal.py  token.py  user.py
app/schemas/: __init__.py  conversation.py  memory.py  pal.py  token.py  user.py
app/utils/: user_data.py
